--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png" />
     <title>Frontend Mentor | Age calculator app</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/style.css" />
     <script src="https://cdn.jsdelivr.net/npm/moment@2.30.1/moment.min.js"></script>
   </head>
   <body>
