--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://github.com/NINHOS0">N1NHOS0</a>.
     </div>
     <script src="https://cdn.jsdelivr.net/npm/moment@2.30.1/moment.min.js" defer></script>
-    <script type="module" src="assets/script.js"></script>
+    <script type="module" src="assets/script.js" defer></script>
   </body>
 </html>
