--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="A challenge proposed by Frontend Mentor">
+    <meta name="description" content="A challenge proposed by Frontend Mentor" />
     <title>Frontend Mentor | Age calculator app</title>
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png" />
-    <link rel="stylesheet" href="assets/style.css" media="all"/>
+    <link rel="stylesheet" href="assets/style.css" media="all" />
   </head>
   <body>
     <form>
@@ -43,7 +43,8 @@
 
     <div class="attribution">
       Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://github.com/NINHOS0">N1NHOS0</a>.
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
+      <a href="https://github.com/NINHOS0">N1NHOS0</a>.
     </div>
     <script src="https://cdn.jsdelivr.net/npm/moment@2.30.1/moment.min.js" defer></script>
     <script type="module" src="assets/script.js" defer></script>
